vsftp: use complete certificate chain

--- a/ansible/templates/vsftpd/vsftpd.conf.j2
+++ b/ansible/templates/vsftpd/vsftpd.conf.j2
@@ -10,7 +10,7 @@ secure_chroot_dir=/var/run/vsftpd/empty
 pam_service_name=vsftpd
 write_enable=YES
 local_umask=002
-rsa_cert_file=/etc/ssl/uva/{{ ansible_fqdn|replace(".","_")}}.crt
+rsa_cert_file=/etc/ssl/uva/{{ ansible_fqdn|replace(".","_")}}_chain.pem
 rsa_private_key_file=/etc/ssl/uva/{{ ansible_fqdn|replace(".","_")}}.key
 ssl_enable=YES
 allow_anon_ssl=NO
